# nomeacao

./: .editorconfig  .gitignore  Dockerfile  build.py  pyproject.toml
app/: gui.py  main.py  utils.py
tests/: test_utils.py
