[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Pedro Ivo <pedro.ivo.freire.aragao@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyPDF2 = "^2.10.0"
PySimpleGUI = "^4.60.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
blue = "^0.9.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
